--- a/style.css
+++ b/style.css
@@ -18,3 +18,8 @@ iframe {
     margin-bottom: 20px;
     transform: translateX(50%);
 }
+
+.hidden {
+    display: none;
+    transform: translateX(50%);
+}
